<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lumiomedical</groupId>
    <artifactId>lumio-record</artifactId>
    <version>0.1.2</version>
    <packaging>jar</packaging>

    <name>Lumio Record</name>
    <description>A library providing utilities for handling document versioning and sourcing in a MongoDB database</description>
    <url>https://github.com/lumio-medical/lumio-record</url>

    <organization>
        <name>Lumio Medical</name>
        <url>https://lumiomedical.com</url>
    </organization>

    <developers>
        <developer>
            <name>Pierre Lecerf</name>
            <email>plecerf@lumiomedical.com</email>
            <organization>Lumio Medical</organization>
            <organizationUrl>https://lumiomedical.com</organizationUrl>
        </developer>
        <developer>
            <name>Thomas Walter</name>
            <email>twalter@lumiomedical.com</email>
            <organization>Lumio Medical</organization>
            <organizationUrl>https://lumiomedical.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>13</maven.compiler.release>
        <slf4j.version>1.7.30</slf4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>zero-allocation-hashing</artifactId>
            <version>0.11</version>
        </dependency>

        <dependency>
            <groupId>com.noleme</groupId>
            <artifactId>noleme-json</artifactId>
            <version>[0.9,)</version>
        </dependency>

        <dependency>
            <groupId>com.noleme</groupId>
            <artifactId>noleme-store</artifactId>
            <version>[1.7,)</version>
        </dependency>

        <dependency>
            <groupId>org.atteo.classindex</groupId>
            <artifactId>classindex</artifactId>
            <version>3.9</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.noleme</groupId>
            <artifactId>noleme-mongodb-test</artifactId>
            <version>[0.2,)</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.noleme</groupId>
            <artifactId>noleme-commons</artifactId>
            <version>[0.17,)</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/lumio-medical/lumio-record/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/lumio-medical/lumio-record/blob/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com:lumio-medical/lumio-record.git</connection>
        <developerConnection>scm:git:ssh://github.com:lumio-medical/lumio-record.git</developerConnection>
        <url>https://github.com/lumio-medical/lumio-record</url>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.7</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>
</project>
